# GEM

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  EVALUATION.md  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: export_onnx.py  fetch_models.py  train.py
site/: index.html  style.css
src/facecore/: __init__.py  config.py  logging_conf.py
src/facecore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/facecore/api/: main.py  schemas.py  security.py
src/facecore/detection/: base.py  retinaface.py  yolo.py
src/facecore/domain/: entities.py
src/facecore/embedding/: arcface.py  backbone.py  base.py
src/facecore/export/: onnx_export.py
src/facecore/inference/: factory.py  pipeline.py  realtime.py
src/facecore/liveness/: base.py  minifasnet.py  silent_face.py
src/facecore/preprocessing/: alignment.py  augmentation.py  validation.py
src/facecore/recognition/: matcher.py  vector_store.py
src/facecore/training/: callbacks.py  dataset.py  margin_head.py  trainer.py
src/facecore/utils/: benchmark.py  device.py
tests/: test_recognition.py
