[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facecore"
version = "1.0.0"
description = "Production-grade face recognition training & inference system"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
# Vendored verbatim from minivision-ai/Silent-Face-Anti-Spoofing (Apache-2.0);
# kept structurally identical so the upstream weights load — not linted.
extend-exclude = ["src/facecore/liveness/minifasnet.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
